fixed amazon pay button + logo on iphone

--- a/100-Prozent-Ausspielungen/Sprint-AB-8.4-Ersparnisse-im-Warenkorb-(mobile)/global/global.less
+++ b/100-Prozent-Ausspielungen/Sprint-AB-8.4-Ersparnisse-im-Warenkorb-(mobile)/global/global.less
@@ -1,6 +1,9 @@
 /* IMPORT VAR LESS FILE */
 // @import "vars.less";
 
+#amazon-pay-button {
+    min-width: 100%;
+}
 
 .yCmsContentSlot + .row {
     border-bottom: solid 1px #CCCCCC;
@@ -832,7 +835,6 @@
     img:last-of-type {
         padding: 5px;
         background: #fefcfb;
-        height: 100%;
         border-radius: 3px;
     }
 }
